--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,13 @@
     <groupId>com.googlecode.json-simple</groupId>
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
-</dependency>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.twitter4j</groupId>
+    <artifactId>twitter4j-core</artifactId>
+    <version>4.0.7</version>
+	</dependency>
   
   	<!-- Librería para trabajar con  ficheros -->
 	<dependency>
